AC_PREREQ(2.61)
AC_INIT([realtime],[realtime-20090930],[ltp-results@lists.sourceforge.net])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([include/realtime_config.h])
AC_CONFIG_FILES([   \
	m4/Makefile \
])
AC_CHECK_HEADERS_ONCE([ \
	pthread.h \
])
AM_CONDITIONAL(CROSS_COMPILATION, test x$cross_compiling = xyes)

AC_CANONICAL_HOST

AC_PROG_CC
# <= autoconf 2.61 doesn't have AC_PROG_AR, but 2.63 has it. Not sure about
# 2.62.
AC_DEFUN([AC_PROG_AR], [AC_CHECK_TOOL(AR, ar, :)])
AC_PROG_AR
AC_PROG_RANLIB

REALTIME_CHECK_PRIO_INHERIT
REALTIME_CHECK_ROBUST_APIS

AC_OUTPUT
